--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,20 +1,30 @@
-include your HTML opening tags
-and your hidden "head" tag
-and your "title" tag
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Kendrick's Labs for INST377</title>
+</head>
 
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
+<body>
+  <h1>Kendrick Montecino's Labs For INST377</h1>
+  <h1> My favorite albums: </h1>
+  <ol>
+    <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
+    <li> DAMN. - Kendrick Lamar </li>
+    <li> Off the Wall - Michael Jackson</li>
+    <li> Forever, Michael - Michael Jackson</li>
+    <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
+  </ol>
+  <h1>Image Carousel</h1>
+  <img src="images/mochi.gif" alt="Mochi as a GIF">
+  <img src="images/mochi.jpg" alt="Mochi as a JPG">
+  <img src="images/mochi.png" alt="Mochi as a PNG">
+  <img src="images/mochi.svg" alt="Mochi as a SVG">
+  <p> These are very cute images of mochi with each of them being in different format!</p>
 
+  <p>
+    Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
+  </p>
+</body>
 
-full-width page footer containing your github account name and a link to your gitHub account
+</html>
