--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,10 +1,50 @@
-Replace this with your complete HTML from Lab 1
+<!DOCTYPE html>
+<html lang="en">
 
-Hook it up to CSS by including style.css in the <head> tag
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Kendrick's Labs for INST377</title>
+</head>
 
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <h1>Kendrick Montecino's Labs For INST377</h1>
+    </header>
+    <div class="container">
 
-You should not need to edit the CSS to do this, only the HTML.
+      <div class="left_section box">
+        <h2> My favorite albums: </h2>
+        <div class="box">
+          <ol>
+            <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
+            <li> DAMN. - Kendrick Lamar </li>
+            <li> Off the Wall - Michael Jackson</li>
+            <li> Forever, Michael - Michael Jackson</li>
+            <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
+          </ol>
+        </div>
+      </div>
 
-Don't forget to add an actual set of image descriptions to your image carousel.
+      <div class="right_section box">
+
+        <h2>Image Carousel</h2>
+        <div class="grid">
+          <img src="images/mochi.gif" alt="Mochi as a GIF">
+          <img src="images/mochi.jpg" alt="Mochi as a JPG">
+          <img src="images/mochi.png" alt="Mochi as a PNG">
+          <img src="images/mochi.svg" alt="Mochi as a SVG">
+        </div>
+        <div class="box">These are very cute images of mochi with each of them being in different format!</div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
+    </footer>
+</body>
+
+</html>
