--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,25 +6,36 @@
 </head>
 
 <body>
-  <h1>Kendrick Montecino's Labs For INST377</h1>
-  <h2> My favorite albums: </h2>
-  <ol>
-    <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
-    <li> DAMN. - Kendrick Lamar </li>
-    <li> Off the Wall - Michael Jackson</li>
-    <li> Forever, Michael - Michael Jackson</li>
-    <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
-  </ol>
-  <h2>Image Carousel</h2>
-  <img src="images/mochi.gif" alt="Mochi as a GIF">
-  <img src="images/mochi.jpg" alt="Mochi as a JPG">
-  <img src="images/mochi.png" alt="Mochi as a PNG">
-  <img src="images/mochi.svg" alt="Mochi as a SVG">
-  <p> These are very cute images of mochi with each of them being in different format!</p>
+  <div class="title_bar">
+    <h1>Kendrick Montecino's Labs For INST377</h1>
+  </div>
+  <div class="favorite_albums">
+    <h2> My favorite albums: </h2>
+    <ol>
+      <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
+      <li> DAMN. - Kendrick Lamar </li>
+      <li> Off the Wall - Michael Jackson</li>
+      <li> Forever, Michael - Michael Jackson</li>
+      <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
+    </ol>
+  </div>
+  <div class="images">
+    <h2>Image Carousel</h2>
+    <img src="images/mochi.gif" alt="Mochi as a GIF">
+    <img src="images/mochi.jpg" alt="Mochi as a JPG">
+    <img src="images/mochi.png" alt="Mochi as a PNG">
+    <img src="images/mochi.svg" alt="Mochi as a SVG">
+  </div>
+  <div class="picture_description">
+    <p> These are very cute images of mochi with each of them being in different format!</p>
+  </div>
 
-  <p>
-    Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
-  </p>
+  <div class="github_link">
+    <p>
+      Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
+    </p>
+  </div>
+
 </body>
 
 </html>
