--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,34 +6,38 @@
 </head>
 
 <body>
-  <div class="title_bar">
-    <h1>Kendrick Montecino's Labs For INST377</h1>
+  <div>
+    <header><h1>Kendrick Montecino's Labs For INST377</h1></header>
   </div>
-  <div class="favorite_albums">
-    <h2> My favorite albums: </h2>
-    <ol>
-      <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
-      <li> DAMN. - Kendrick Lamar </li>
-      <li> Off the Wall - Michael Jackson</li>
-      <li> Forever, Michael - Michael Jackson</li>
-      <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
-    </ol>
+  <div>
+    <div><h2> My favorite albums: </h2></div>
+    <div>
+      <ol>
+        <li> Mr. Morale & The Big Steppers - Kendrick Lamar </li>
+        <li> DAMN. - Kendrick Lamar </li>
+        <li> Off the Wall - Michael Jackson</li>
+        <li> Forever, Michael - Michael Jackson</li>
+        <li>LOVE ALL SERVE ALL - Fujii Kaze </li>
+      </ol>
+    </div>
   </div>
-  <div class="images">
-    <h2>Image Carousel</h2>
-    <img src="images/mochi.gif" alt="Mochi as a GIF">
-    <img src="images/mochi.jpg" alt="Mochi as a JPG">
-    <img src="images/mochi.png" alt="Mochi as a PNG">
-    <img src="images/mochi.svg" alt="Mochi as a SVG">
-  </div>
-  <div class="picture_description">
+
+    <header><h2>Image Carousel</h2></header>
+    <div>
+      <img src="images/mochi.gif" alt="Mochi as a GIF">
+      <img src="images/mochi.jpg" alt="Mochi as a JPG">
+      <img src="images/mochi.png" alt="Mochi as a PNG">
+      <img src="images/mochi.svg" alt="Mochi as a SVG">
+    </div>
+
+  <div>
     <p> These are very cute images of mochi with each of them being in different format!</p>
   </div>
 
-  <div class="github_link">
-    <p>
+  <div>
+    <footer>
       Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
-    </p>
+    </footer>
   </div>
 
 </body>
