--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,10 +1,43 @@
-<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
-<!-- Try typing 'doc' at the top of this file and pressing "tab" -->
-<!-- if your development environment is set up correctly -->
-<!-- the Emmett plugin will set this file up for you -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kendrick Montecino's Labs For INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="Wrapper">
+      <header class="header">
+        <h1>Kendrick Montecino's Labs For INST377</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Forum inputs</h3>
+          
+          <form action="/api" class="box">
+            <p>Restaurants Name</p>
+            <label for="resto"></label>
+            <input type="text" name="resto" id="resto" />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
 
-<!-- Requirements -->
-<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
-<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restaurant_list box">
+              <li>Marathon Deli</li>
+              <li>Denny's</li>
+              <li>McDonald's</li>
+              <li>Subway</li>
+              <li>Panda Express</li>
+          </div>
+        </div>
+      </div>
 
-<!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
+      <footer class="footer">
+        Follow my Github, <a href="https://github.com/10drck">10drck</a> to follow along with some of my projects!
+      </footer>
+    </div>
+  </body>
+</html>
