api link updated

--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -15,10 +15,10 @@
         <div class="left_section box">
           <h3>Forum inputs</h3>
           
-          <form action="/api" class="box">
-            <p>Restaurants Name</p>
+          <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" class="box">
+            <small>Restaurants Name</small>
             <label for="resto"></label>
-            <input type="text" name="resto" id="resto" />
+            <input type="text" id="resto" />
             <button type="submit">Submit</button>
           </form>
         </div>
